application/frontend/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: microtodoui-ingress
  namespace: frontend-ns

spec:
  ingressClassName: nginx
  rules:
    - host: microtodoui.ab-learn.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: microtodoui-service
                port: 
                  
                  number: 80
